resolve footer contrast errors in Flat: Purple (buttons in header) theme *Accessibility

--- a/themes/Nottingham/btnTopPurple/btnTopPurple.css
+++ b/themes/Nottingham/btnTopPurple/btnTopPurple.css
@@ -21,6 +21,9 @@ div#x_footerBlock {
 	background:	none;
 	padding:	0px;
 }
+#x_footerBlock .ui-button-text{
+	color:#ffffff;
+}
 
 div#footerWrapper {
 	float:		left;
